tests/type-errors/assign_error_int_rat.arl
archetype assign_error_int_rat

variable i : int = 1

entry exec () {
  i += 1.1;
}
